MANVIR SANDBOX/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Documents_downloaded__c</fullName>
        <label>Documents downloaded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INTID__c</fullName>
        <description>Please don&apos;t delete (Used for Migration Reference)</description>
        <inlineHelpText>Please don&apos;t delete (Used for Migration Reference)</inlineHelpText>
        <label>INTID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Rank__c</fullName>
        <label>Marketing Rank</label>
        <picklist>
            <picklistValues>
                <fullName>I - Raw Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II - Possible Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III - Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV - Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Type__c</fullName>
        <label>Network Type</label>
        <picklist>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator_Tier__c</fullName>
        <label>Operator Tier</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscribers__c</fullName>
        <label># Subscribers</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telco_Sector__c</fullName>
        <label>Telco Sector</label>
        <picklist>
            <picklistValues>
                <fullName>AGGREGATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPERATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH VENDOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>HotLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>MarketingIIILeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Marketing_Rank__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>Marketing I &amp; II Leads</label>
        <sharedTo>
            <group>Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
</CustomObject>